Time Functionality Is Added
feat: Time Functionality Is Added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 <h1>Matching Cards Game</h1>
+<div class="timer">
+			<span class="minutes">0</span> minute(s) 
+			<span class="seconds">0</span> seconds.
+</div>
 <div id="score-card">
 	<ul class="stars">
 		<li><i class="fa fa-star"></i></li>
